envoy.yaml
stats_config:
  stats_tags:
    # Envoy extracs the first matching group as a value.
    # This case, the part ([a-zA-Z]+) is extracted as a value for "value" tag.
    # See https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/metrics/v3/stats.proto#config-metrics-v3-statsconfig.
    - tag_name: modelName
      regex: '(&modelName=(.*?)&)'
    - tag_name: method
      regex: '(&method=(.*?)&)'
    - tag_name: status
      regex: '(&status=(.*?)&)'
    - tag_name: KIND
      regex: '(&KIND=(.*?)&)'

static_resources:
  clusters:
    - name: httpbin
      connect_timeout: 5000s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: httpbin
                          request_headers_to_add:
                            - header:
                                key: MODEL-ID
                                value: "aaaa"
                            - header:
                                key: MODEL-NAME
                                value: "bbbbb"
                          response_headers_to_add:
                            - header:
                                key: MODEL-ID
                                value: "%REQ(MODEL-ID)%"
                            - header:
                                key: MODEL-NAME
                                value: "%REQ(MODEL-NAME)%"
#                            - header:
#                                key: APS-CURRENT-TIME
#                                value: "%REQ(APS-CURRENT-TIME)%"
#                            - header:
#                                key: APS-CODE
#                                value: "0"
                http_filters:
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          vm_config:
                            runtime: "envoy.wasm.runtime.v8"
                            code:
                              local:
                                filename: "/Users/fengqi/datacavas/code/envoy-wasm/optimized.wasm"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
